--- a/BeforAfter/Podfile
+++ b/BeforAfter/Podfile
@@ -4,7 +4,8 @@ platform :ios, '8.0'
 target 'BeforAfter' do
 
   pod 'FLAnimatedImage', '~> 1.0'
-  
+  pod 'ionicons'
+
 end
 
 target 'BeforAfterTests' do
