--- a/BeforAfter/Podfile
+++ b/BeforAfter/Podfile
@@ -6,6 +6,7 @@ target 'BeforAfter' do
   pod 'FLAnimatedImage', '~> 1.0'
   pod 'ionicons'
   pod 'AFNetworking', '~>2.0'
+  pod 'SVProgressHUD'
 
 end
 
